# Reflection-Eraser

./: .gitignore  CMakeLists.txt  README.md  README.txt  correcter.cpp  decomposition.cpp  decomposition.h  face00R.tif  image.cpp  image.h  initialization.cpp  initialization.h  interpolation.cpp  interpolation.h  main.cpp  motion.cpp  motion.h  sources.txt
edges/: CMakeLists.txt  interpolation.cpp  main - Copie.cpp  main.cpp
edges/results/: v1_red.txt  v2_red.txt
images/: face00R.tif  face01R.tif
src/: decomposition.cpp  decomposition.h  image.cpp  image.h  motion.cpp
vagues/: face00R.tif  face01R.tif
